# software-testing-code

./: README.md
.circleci/: config.yml  config.yml~
.circleci/my_stl/: CMakeLists.txt
.circleci/my_stl/src/: CMakeLists.txt
.circleci/my_stl/src/set/: CMakeLists.txt  set.cpp  set.hpp
.circleci/my_stl/src/stack/: CMakeLists.txt
.circleci/my_stl/src/string/: CMakeLists.txt  string.hpp
.circleci/my_stl/test/set/: test_default_ctor.cpp  test_int_ctor.cpp
.circleci/my_stl/test/stack/: CMakeLists.txt  test_ctor_copy.cpp  test_ctor_default.cpp  test_empty.cpp  test_push_pop.cpp
.circleci/my_stl/test/string/: CMakeLists.txt  test_ctor_charArray.cpp  test_find_string.cpp  test_greaterThan.cpp  test_input.cpp  test_lessThan.cpp  test_subscript.cpp  test_substring.cpp  test_swap_assign.cpp
basic_testing/: Makefile  string.hpp  test_concat.cpp  test_cstring_ctor.cpp  test_default_ctor.cpp  test_equality.cpp
boost_test/: README.md  complex.hpp  fixture.cpp  test_add.datasets.cpp  test_add.datasets.hpp  test_complex.cpp  test_equals.cpp  test_equals.datasets.cpp  test_equals.datasets.hpp  test_equals_master_test_suite.cpp  test_equals_with_fixture.cpp  test_output.cpp
cppunit/fixture/: complex_number_test.cpp  complex_number_test.hpp  driver.cpp
cppunit/testcase/: complex_number_test.testcase.hpp  driver.testcase.cpp
docker/: my_stl.Dockerfile  srcml.Dockerfile
is_palindrome/: palindrome.cpp  palindrome.hpp  test_is_palindrome.cpp  test_palindrome.cpp
mocking/: README.md  session.cpp  session_clock.cpp  test_calculator.cpp  test_session.cpp
my_stl/: CMakeLists.txt  CTestConfig.cmake
my_stl/src/stack/: stack.hpp
my_stl/src/string/: string.cpp
my_stl/test/: CMakeLists.txt
my_stl/test/set/: CMakeLists.txt
my_stl/test/stack/: test_assign.cpp  test_swap.cpp
my_stl/test/string/: test_concat.cpp  test_ctor_char.cpp  test_ctor_copy.cpp  test_ctor_default.cpp  test_equal.cpp  test_find_char.cpp  test_len_cap.cpp  test_split.cpp
selenium/: python_org_search.py  selenium_test_examples.py  test.html
